Change the icon size to be based on --scale variable instead of a fixed size variable.

--- a/src/components/HoverIcon.module.css
+++ b/src/components/HoverIcon.module.css
@@ -12,7 +12,7 @@
 }
 
 .icon {
-  font-size: var(--size);
+  font-size: calc(var(--scale) * 6);
   line-height: 1;
   display: flex;
   align-items: center;
