Modify the Header and Home components to adjust font sizes and layout. removed the subtitle from the Header component. added shimmer effect to the title text in Header. wrapped the timeline in a div with a specific class for styling. enlarged header to expand view area.

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,17 +1,33 @@
- @import '../Styles/theme.css'; 
+ @import '../Styles/theme.css';
 
  .icons {
-  background-color: var(--Primary);
-  color: var(--textPrimary);
-  display: flex;
-  justify-content: center;
- }
- 
-  .description {
-  background-color: var(--Primary);
-  color: var(--textPrimary);  
-  padding: 2rem;
-  text-align: center;
-  font-size: calc(var(--scale) * 1.1);
+     background-color: var(--Primary);
+     color: var(--textPrimary);
+     display: flex;
+     justify-content: center;
  }
 
+ .description {
+     background-color: var(--Primary);
+     color: var(--textPrimary);
+     padding: 2rem;
+     text-align: center;
+     font-size: calc(var(--scale) * 1.1);
+ }
+
+ .background {
+     background-color: var(--Primary);
+     color: var(--textPrimary);
+     padding: 2rem;
+     text-align: center;
+ }
+
+ .timeline {
+     background-color: var(--Primary);
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     gap: 3rem;
+     padding-top: 2.5rem;
+     padding-bottom: 2.5rem;
+ }
