--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -49,7 +49,7 @@
      background-color: var(--Primary);
      color: var(--textPrimary);
      padding-top: 1rem;
-     padding-bottom: 1rem;
+     padding-bottom: 3rem;
      padding-left: 20%;
      padding-right: 20%;
      text-align: center;
@@ -83,4 +83,21 @@
      border-radius: 0.75rem;
      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
      font-size: 1.125rem;
+ }
+
+ .descriptionBox {
+     flex: 1;
+     padding: 1rem 2rem;
+     display: flex;
+     align-items: center;
+ }
+
+ .descriptionBox p {
+     color: var(--textSecondary);
+     font-size: calc(var(--scale) * 0.8);
+     text-align: justify;
+     text-align-last: justify;
+     text-justify: inter-word;
+     line-height: 1.6;
+     margin: 0;
  }
