--- a/src/Styles/theme.css
+++ b/src/Styles/theme.css
@@ -16,6 +16,7 @@
   --space-lg: 2rem;
   --space-xl: 3rem;
   --space-2xl: 4rem;
+  --space-3xl: 6rem;
 
   /* Responsive breakpoints - reference only (use in media queries) */
   /* --bp-phone: 480px; */
