Make the nav bar style dynamic to the page being viewed.

--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -5,6 +5,10 @@
     background-color: var(--Primary);
 }
 
+.blackNav {
+    background-color: black;
+}
+
 @media (min-width: 768px) {
     .navBar {
         padding: var(--space-md);
